external-crates/move/crates/move-compiler/tests/move_check/parser/spec_parsing_lambda_fail.exp
warning[W09002]: unused variable
  ┌─ tests/move_check/parser/spec_parsing_lambda_fail.move:2:24
  │
2 │     fun lambda_in_prog(x: u64) {
  │                        ^ Unused parameter 'x'. Consider removing or prefixing with an underscore: '_x'
  │
  = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E00002]: DEPRECATED. unexpected spec item
  ┌─ tests/move_check/parser/spec_parsing_lambda_fail.move:3:15
  │
3 │       let _ = |y| x + y;
  │               ^^^^^^^^^ Specification blocks are deprecated

